fix: env 변수명 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,27 @@
 version: '3.8'
-
 services:
-  app:
+  notice-app:
     build: .
     ports:
-      - "${SERVER_PORT}:${SERVER_PORT}"
+      - "${NOTICE_SERVER_PORT}:${NOTICE_SERVER_PORT}"
     depends_on:
-      - db
+      - notice-db
     environment:
-      - SERVER_PORT=${SERVER_PORT}                                                                                                         │
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${DB_NAME}                                                                         │
-      - SPRING_DATASOURCE_USERNAME=${DB_USER}                                                                                              │
-      - SPRING_DATASOURCE_PASSWORD=${DB_PASS}
+      - SERVER_PORT=${NOTICE_SERVER_PORT}
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://notice-db:5432/${NOTICE_DB_NAME}
+      - SPRING_DATASOURCE_USERNAME=${NOTICE_DB_USER}
+      - SPRING_DATASOURCE_PASSWORD=${NOTICE_DB_PASS}
 
-  db:
+  notice-db:
     image: postgres:15
-    restart: always
-    environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASS}
     ports:
-      - "${DB_PORT}:5432"
+      - "${NOTICE_DB_PORT}:5432"
+    environment:
+      - POSTGRES_DB=${NOTICE_DB_NAME}
+      - POSTGRES_USER=${NOTICE_DB_USER}
+      - POSTGRES_PASSWORD=${NOTICE_DB_PASS}
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - notice_postgres_data:/var/lib/postgresql/data
 
 volumes:
-  db_data:
+  notice_postgres_data:
